sites/all/themes/nm_bootstrap/css/style.css
/* ... */
#block-social-media-links-social-media-links {
  margin: 15px 0px 0px 0px;
}

@media (min-width: 990px) {
  #block-social-media-links-social-media-links {
    float: right;
  }
}

@media (max-width: 990px) {
  #block-social-media-links-social-media-links {
    margin-left: 66px;
  }
}

#block-block-1 > p > a {
  font-size: 1.25em;
  margin: 5px 75px;
  float: right;
  font-size: x-large;
}

@media (max-width: 990px) {
  #block-block-1 > p > a {
    float: left;
  }
}

#block-block-1 > p {
  margin-top: 15px;
}

/*#ddblock-1 > div, #ddblock-3 > div {
  display: inline;
}*/

#stratosphere {
  font-size: 20.5px;
  margin-bottom: -20px;
}

#block-menu-block-1 {
  margin-bottom: 20px;
}

@media (min-width: 1200px) and (max-width: 1199px) {
  body > div.main-container.container {
    margin-top: 100px;
  }
}

#profile-main + h3 {
  display: none;
}

#block-views-f66d0670fba5854a52cbb15197f898cf > div > div > div > div.views-field.views-field-field-image {
  float: left;
  margin: 0px 15px 15px 0px;
}

#block-views-tweets-block > div > div.view-content > div > ul > li > div > span > img {
  float: left;
}

#block-views-tweets-block > div > div.view-content > div > ul > li {
  margin-bottom: 25px;
}

#block-views-tweets-block > div > div.view-header > p > a > img {
  width: 100%;
  padding: 50px;
}

#block-block-3, #block-views-tweets-block {
  border-top: black;
  border-top-style: groove;
  border-top-width: thin;
  margin-top: 20px;
}

#block-menu-block-1 > h2 {
  font-size: 24px;
}

.gillsans {
  font-family: "Gill Sans";
  font-style: normal;
  font-weight: normal;
}

.gillsansbold {
  font-family: "Gill Sans";
  font-style: normal;
  font-weight: bold;
}

.gillsansbolditalic {
  font-family: "Gill Sans";
  font-style: italic;
  font-weight: bold;
}

.gillsanscondensed {
  font-family: "Gill Sans Cond";
  font-style: normal;
  font-weight: normal;
}

.gillsanscondensedbold {
  font-family: "Gill Sans Cond";
  font-style: normal;
  font-weight: bold;
}

.gillsansitalic {
  font-family: "Gill Sans";
  font-style: italic;
  font-weight: normal;
}

.gillsanslight {
  font-family: "Gill Sans Light";
  font-style: normal;
  font-weight: normal;
}

.gillsanslightitalic {
  font-family: "Gill Sans Light";
  font-style: italic;
  font-weight: normal;
}

.gillsansultrabold {
  font-family: "Gill Sans Ultra Bold";
  font-style: normal;
  font-weight: bold;
}

.gillsansultraboldcondensed {
  font-family: "Gill Sans Ultra Bold Cond";
  font-style: normal;
  font-weight: bold;
}

#navbar > div > div.navbar-header > a.name.navbar-brand {
  font-family: "Gill Sans";
  font-size: -webkit-xxx-large;
  margin-top: 25px;
  margin-bottom: 15px;
}

#navbar > div > div.navbar-header > p {
  font-family: "Gill Sans Light";
  font-style: italic;
  font-size: x-large;
}

div.field-name-field-tags div.field-items div.field-item > a {
  float: left;
  margin-right: 15px;
}

#block-views-tweets-block img {
  padding-right: 5px;
}

div.node-article > div.user-picture > a > img {
  display: none;
}

body.front div.user-picture > a > img {
  display: none;
}

div.author-pane-line.author-offline {
  display: none;
}

div.author-last-seen {
  display: none;
}

div.author-joined {
  display: none;
}

.node-article > ul.links {
  padding-top: 5px;
}

#block-views-reporters-block img {
  float: left;
  padding-right: 5px;
}

